# backend

./: .gitignore  ADMIN_API_DOCUMENTATION.md  API_DOCUMENTATION.md  Dockerfile  EMAIL_SETUP.md  MODELS_SUMMARY.md  README.md  USER_API_DOCUMENTATION.md  WEBSOCKET_CLIENT_EXAMPLE.md  WORKFLOW_API_DOCUMENTATION.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  run.py  seed_wallets.py  seed_workflows.py  start_dev.sh  tmp_test_search.py
alembic/: env.py
alembic/versions/: 1cf2e17302ea_add_all_new_models_for_usitech_database_.py  ea82ecd7c2c5_add_wallet_system_tables.py
app/: main.py
app/api/: __init__.py  admin_categories_router.py  admin_notifications_router.py  admin_purchases_router.py  admin_router.py  admin_users_router.py  admin_wallet_router.py  admin_workflows_router.py  auth.py  auth_router.py  categories_router.py  contact_router.py  deposit_router.py  notifications_router.py  orders_router.py  users.py  users_router.py  wallet_router.py  webhook_router.py  websocket_router.py  wishlist_router.py  workflows_router.py
app/core/: __init__.py  config.py  cors.py  database.py
app/models/: __init__.py  category.py  comment.py  contact.py  enums.py  favorite.py  invoice.py  notification.py  purchase.py  user.py  wallet.py  workflow.py  workflow_asset.py  workflow_category.py
app/schemas/: __init__.py  admin.py  auth.py  contact.py  dashboard.py  notification.py  order.py  purchase.py  user.py  wallet.py  workflow.py
app/services/: __init__.py  auth.py  auth_service.py  email_service.py  (+5 more)
tests/: test_main.py
